[package]
name = "dhravya_api"
description = "An API wrapper for the Dhravya API"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.0"
serde_json = "1.0"